5.20.0
NEW
    - Added raid pet grid

FIXES
    - Raid buff indicators should now show as expected

5.19.2
FIXES
    - Minimap button issue

MISC
    - Update locals

5.19.1
FIXES
    - Ember court issue
    - Garrision minimap icon tweaks

5.19.0
NEW
    - Added 'Smart' Raid Markers: Use a defined key (via keybinds) to open the smart raid marker menu.
        This opens a circle with all raid markers directly under your cursor
    - Added a prio for scaling important and dispellable debuffs

MISC
    - Redo raid and party grid profiling

5.18.0
NEW
    - Added Encounter Journal, Soulbinds and Convenant Sanctum Skin
    - Added 'Friends' tooltip to character micro menu button
FIXES
    - Raid frame sort by role

5.17.2
FIXES
    - Missing raid buff pet battle overlapping
    - Raid frame sort by role

MISC
    - Added OmniCD support

5.17.1
FIXES
    - Tweak raid/party profiles and fix some bugs
    - You can now change raid/party profile settings while in a party/raid

MISC
    - Added option to show chat timestamps for all messages
    - Added ability to add a custom sound for chat keyword alert

5.17.0
NEW
    - CHAT:
        Added lots of new settings to the chat module
            - Detacting URL Links and make them clickable
            - A Keyword System, which marks your keywords in the chat and plays a sound
            - Classcoloring char names
            - Short Channel names
            - Emoticon's
            - Show role icons before the names (if you are in a raid or party)
            - Spam Intervall: Hides the same messages in a given time
            - Combat Repeate: Close the chat editbox if you type in the same char for a given number while in combat
            - Link Hovering: Shows the tooltip of eg a Achivment while hovering
            - Quick Join Messages: Show clickable Quick Join messages inside of the chat
    - Added a new "Role Bar" which shows your group or raid's role composition