@@ -4,6 +4,7 @@ local v = GW.vernotes
 v("5.19.0", [=[
 NEW
     - Added raid pet grid
+    - Added option to fade main actionbar
 
 FIXES
     - Raid buff indicators should now show as expected
