@@ -147,6 +147,7 @@ GW_DEFAULT["FADE_MULTIACTIONBAR_1"] = "ALWAYS"
 GW_DEFAULT["FADE_MULTIACTIONBAR_2"] = "ALWAYS"
 GW_DEFAULT["FADE_MULTIACTIONBAR_3"] = "ALWAYS"
 GW_DEFAULT["FADE_MULTIACTIONBAR_4"] = "ALWAYS"
+GW_DEFAULT["FADE_MULTIACTIONBAR_5"] = "ALWAYS"
 GW_DEFAULT["HIDE_CHATSHADOW"] = false
 GW_DEFAULT["HIDE_QUESTVIEW"] = false
 GW_DEFAULT["USE_CHAT_BUBBLES"] = false
