@@ -1,6 +1,7 @@
 5.20.0
 NEW
     - Added raid pet grid
+    - Added option to fade main actionbar
 
 FIXES
     - Raid buff indicators should now show as expected
